2005-10-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* emacs/mhc-cvs.el (mhc-cvs/modify): Make a committed file
	writable after committed.
	(mhc-cvs/backend): Copy `process-environment' before calling
	`setenv'.

2005-10-04  NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp> / shirai

	* emacs/mhc-parse.el (mhc-parse/strict): New internal variable.
	(mhc-parse/time): Add detailed error message. Add strict parsing
	mode.
	(mhc-parse/alarm-regexp): New regexp.
	(mhc-parse/alarm): Add detailed error message. Add strict parsing
	mode.
	(mhc-parse/internal-parser): Add third optional argument
	`strict'. Bind `mhc-parse/strict' to `strict'.
	(mhc-parse-buffer): Add third optional argument `strict'. Call
	mhc-parse/internal-parser() with `strict'.

	* emacs/mhc-draft.el (mhc-draft-finish): Call mhc-parse-buffer()
	with `strict'.

2005-10-03  NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp> / nom

	* emacs/mhc-logic.el, emacs/mhc-parse.el: add detailed error messages.

2005-10-03  KOIE Hidetaka <hide@koie.org> / nom

	* ruby-ext/lib/mhc-schedule.rb (MhcLog#add_entry): add fsync.
	(MhcScheduleDB#makedir_or_higher): ditto.

2005-09-08 Yoshinari Nomura <nom@quickhack.net>

	* palm2mhc.in (toplevel): more fsync hack.

	* ruby-ext/lib/mhc-schedule.rb (File::utime2): more fsync hack.

2005-07-06 Yoshinari Nomura  <nom@quickhack.net>

	* palm2mhc.in (toplevel): hit fsync x 3 before clearing the pdb
		  dirty flag.
	(TNX, Mr. KOIE Hidetaka <hide@koie.org>)

2005-05-15  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* emacs/mhc.el (mhc-delete-file-hook): New hook.
	(mhc-delete-file): Run `mhc-delete-file-hook'.
	Thanks to NOGUCHI Yusuke <nogunogu@mva.biglobe.ne.jp>.

2005-05-14  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* emacs/mhc-wl.el (mhc-wl-summary-filename): Message with number
	100000 is not associated with file.

2005-05-02  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* mhc2ol.in (usage): Add usage of `-H' option.
	(MhcScheduleItem#dump_without_header): New method.